feat(core): virtual-thread option pra offload pool + bump Java 21
useVirtualThreadsForOffload(boolean) no builder. Quando true, offload
pool usa Executors.newThreadPerTaskExecutor com Thread.ofVirtual()
factory em vez do cached platform pool default.

Quando ligar:
- offload work dominado por blocking I/O (DB, REST, file reads)
- escalar pra 10k+ offloads concorrentes baratos (alocação ~1KB cada
  vs ~1MB stack platform thread)

Quando NÃO ligar:
- CPU-bound offload (compute pesado sem I/O): virtual thread mounting
  tem overhead pequeno e não traz benefit
- default fica platform thread (backward compatible com v0.1.0 API)

Loop thread continua platform thread sempre — virtual threads NÃO são
adequados pro deterministic-timing main loop (carrier thread parking
durante mount/unmount adiciona jitter).

Bump Java target 17 → 21:
- pom.xml maven.compiler.release=21
- CI matrix Java {17,21} → Java {21,23} (21 LTS atual + 23 latest)
- v0.2.0 justifica bump: virtual threads são THE feature da release

Tests (2 novos, 31 total):
- offload_runs_on_virtual_thread_when_enabled — verifica
  Thread.currentThread().isVirtual() == true E thread name começa
  com "{prefix}-offload-vt-"
- offload_runs_on_platform_thread_by_default — backward compat